--- a/table.html
+++ b/table.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,8 +31,9 @@
         }
     </style>
 </head>
+
 <body>
-    
+
     <table border="1">
         <thead>
             <tr>
@@ -50,8 +52,8 @@
                 <td style="font-weight: bold;">Kota</td>
             </tr>
             <tr>
-                <td>Raka Gibran</td>
-                <td>Buming</td>
+                <td>Mohd</td>
+                <td>Azriqin</td>
                 <td>Sudirman</td>
                 <td>Bandung</td>
             </tr>
@@ -80,4 +82,5 @@
     </table>
     <p>Made by Mohd Azriqin</p>
 </body>
+
 </html>
